<resources>

    <string name="app_name">ExcelDB</string>
    <string name="espelosa">Espesor Losa</string>
    <string name="regis">REGISTRAR CARRETERA</string>
    <string name="consul">CONSULTAR CARRETERA</string>
    <string name="regissegFlex">REGISTRAR SEGMENTO FLEXIBLE</string>
    <string name="regissegRigi">REGISTRAR SEGMENTO RíGIDO</string>
    <string name="seRegis">SE REGISTRÓ EL SEGMENTO</string>
    <string name="regisSeg">REGISTRAR SEGMENTO</string>
    <string name="consulSeg">CONSULTAR SEGMENTOS</string>
    <string name="regisPatologias">REGISTRO PATOLOGIAS</string>
    <string name="consulPato">CONSULTAR PATOLOGIAS</string>
    <string name="datosSegmento">DATOS SEGMENTO</string>
    <string name="exportar">Exportar</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre: </string>
    <string name="codigo">Código:</string>
    <string name="territorial">Territorial: </string>
    <string name="admon">Concesión, MTTO Integral, A.M.V</string>
    <string name="levantado">Levantado por: </string>
    <string name="buscar">BUSCAR</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="title_activity_consultar_carretera">ConsultarCarreteraActivity</string>
    <string name="datosCarretera">Datos Carretera</string>
    <string name="segmento">Segmento</string>
    <string name="adminstracion">Administracion</string>
    <string name="vacio">Vacio</string>
    <string name="pavFlex">Pavimento Flexible</string>
    <string name="pavRigi">Pavimento Rigido</string>
    <string name="nCalzadas">Calzadas</string>
    <string name="nCarriles">Carriles por calzada</string>
    <string name="anchoCarril">Carril </string>
    <string name="anchoBerma">Berma </string>
    <string name="espesorLosa">Espesor losa (mm)</string>
    <string name="pri">PRI</string>
    <string name="prf">PRF</string>
    <string name="comentarios">Comentarios</string>
    <string name="numero">Número de: </string>
    <string name="ancho">Ancho (m):</string>
    <string name="carril">Carril</string>
    <string name="patologia">Patología</string>
    <string name="codPato">Codígo daño</string>
    <string name="danio">Dimensiones daño (m)</string>
    <string name="danio_activity">Daño</string>
    <string name="largo">Largo</string>
    <string name="anchoD">Ancho </string>
    <string name="puntoReferencia">Puntos de referencia</string>
    <string name="reparacion">Dimensiones Reparación (m)</string>
    <string name="aclaraciones">Aclaraciones</string>
    <string name="registroPato">Registro Patología</string>
    <string name="tipoPav">Tipo de pavimento: </string>
    <string name="anchocarril">Ancho carril(m)</string>
    <string name="anchoberma">Ancho berma(m)</string>
    <string name="seleccioneDanio">Seleccione el tipo de daño</string>
    <string name="editarSegmento">EDITAR SEGMENTO</string>
    <string name="editarCarretera">Editar CARRETERA</string>
    <string name="validarNCalzadas">Ingrese el numero de calzadas</string>
    <string name="validarNCarriles">Ingrese el numero de carriles</string>
    <string name="validarAnchoCarril">Ingrese el ancho del carril</string>
    <string name="validarAnchoBerma">Ingrese el ancho de la berma</string>
    <string name="validarPri">Ingrese el PRI</string>
    <string name="abscisa">Abscisa</string>
    <string name="coordenadas">Obtener Coordenadas</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="patoFlex">Registro Daños Pav. Flex.</string>
    <string name="fecha">Fecha</string>
    <string name="severidad">Severidad</string>

    <!--Daños Pavimento Flexible!-->
    <string name="fisuras_long_transversales">Fisuras Longitudinales y transversales</string>
    <string name="fisuras_fl_lt">FL,FT</string>
    <string name="fisura_construccion">Fisura longitudinal en junta de construcción</string>
    <string name="fisura_fcl">FCL</string>
    <string name="fisura_reflexion">Fisuras por reflexión de juntas o grietas en placas de concreto</string>
    <string name="fisura_fjl">FJL o FJT</string>
    <string name="fisura_medialuna">Fisuras en medialuna</string>
    <string name="fisura_fml">FML</string>
    <string name="fisura_borde">Fisuras de borde</string>
    <string name="fbd">FBD</string>
    <string name="fisura_bloque">Fisuras en bloque</string>
    <string name="fisura_fb">FB</string>
    <string name="piel_cocodrilo">Piel de cocotrilo</string>
    <string name="pc">PC</string>
    <string name="fisura_desplazamiento">Fisuración por desplazamiento de capas</string>
    <string name="fdc">FDC</string>
    <string name="fisura_incipiente">Fisuración incipiente</string>
    <string name="fin">FIN</string>
    <string name="ondulacion">Ondulación</string>
    <string name="ond">OND</string>
    <string name="abultamiento">Abultamiento</string>
    <string name="ab">AB</string>
    <string name="hundimiento">Hundimiento</string>
    <string name="hun">HUN</string>
    <string name="ahuellamiento">Ahuellamiento</string>
    <string name="ahu">AHU</string>
    <string name="descascaramientof">Descascaramiento </string>
    <string name="dcf">DC</string>
    <string name="bachesf">Baches</string>
    <string name="bchf">BCH</string>
    <string name="parche">Parche</string>
    <string name="pch">PCH</string>
    <string name="desgaste_superficial">Desgaste superficial</string>
    <string name="dsu">DSU</string>
    <string name="perdida_agregado">Perdida de agregado</string>
    <string name="pa">PA</string>
    <string name="pulimentof_agregado">Pulimento del agregado</string>
    <string name="puf">PU</string>
    <string name="cabeza_dura">cabezas duras</string>
    <string name="cd">CD</string>
    <string name="exudacion">Exudación</string>
    <string name="ex">EX</string>
    <string name="surcos">Surcos</string>
    <string name="su">SU</string>
    <string name="corrimiento_berma">Corrimiento vertical de la berma</string>
    <string name="cvb">CVB</string>
    <string name="separación_bermaf">Separación de la berma</string>
    <string name="sbf">SB</string>
    <string name="afloramiento_finos">Afloramiento de finos</string>
    <string name="afi">AFI</string>
    <string name="afloramiento_agua">Afloramiento de agua</string>
    <string name="afa">AFA</string>
</resources>
