<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alejo_zr.exceldb.Carretera.RegistroCarreteraActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/campoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/campoCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/campoTerritorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/territorial"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/campoAdmon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admon"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/campoLevantado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/levantado"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:layout_marginTop="30dp"
        android:onClick="onClick"/>

</LinearLayout>
